# chia_full_node_rs

./: .gitignore  Cargo.toml  docker-compose.yml
src/: main.rs
